@@ -91,3 +91,5 @@
 /tests/bugs/issue-95/Issue95.hs
 /tests/bugs/issue-96/Issue96.hs
 /tests/bugs/issue-96/Issue96
+/tests/bugs/issue-107/Issue107
+/tests/bugs/issue-107/Issue107.hs
